# bazel-monorepo-from-scratch

./: .bazelrc  BUILD  MODULE.bazel  README.md
.github/workflows/: build.yml
aspects/: defs.bzl
processing/: BUILD  cli.cpp  numpy_file_reader.cpp  numpy_file_reader.hpp  numpy_file_reader_pybind.cpp  py_cli.py
processing/data/: BUILD  data.npy
rules/empty_rule/: BUILD  empty_rule.bzl
rules/expand_template/: BUILD  expand_template.bzl  personal_info.json.tpl
tools/python_requirements/: BUILD  requirements_lock.txt
