module(
    name = "bazel-monorepo-from-scratch",
    version = "0.1.0",
)
bazel_dep(name = "rules_uv", version = "0.88.0")
bazel_dep(name = "rules_cc", version = "0.2.9")
bazel_dep(name = "rules_python", version = "1.6.3")
bazel_dep(name = "pybind11_bazel", version = "3.0.0")
bazel_dep(name = "platforms", version = "1.0.0")


PYTHON_VERSION = "3.13"
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = PYTHON_VERSION,
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pypi",
    requirements_lock = "//tools/python_requirements:requirements_lock.txt",
    python_version = PYTHON_VERSION,
)
use_repo(pip, "pypi")
